# MindNest

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  stats.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs
src-tauri/src/db/: background_image.rs  background_music.rs  board.rs  bookmark.rs  calendar.rs  database.rs  folder.rs  gallery.rs  journal.rs  mindmap.rs  mod.rs  nest.rs  nest_background.rs  nestling.rs  note.rs  planner.rs  tag.rs  user.rs
src-tauri/src/fs/: background_music.rs  file.rs  gallery.rs  io.rs  mod.rs
src-tauri/src/handler/: background_image.rs  background_music.rs  board.rs  bookmark.rs  calendar.rs  database.rs  folder.rs  gallery.rs  journal.rs  mindmap.rs  mod.rs  nest.rs  nest_background.rs  nestling.rs  note.rs  planner.rs  tag.rs  user.rs
src-tauri/src/models/: background_image.rs  background_music.rs  board.rs  bookmark.rs  calendar.rs  database.rs  folder.rs  gallery.rs  journal.rs  mindmap.rs  mod.rs  nest.rs  nest_background.rs  nestling.rs  note.rs  tag.rs  user.rs
src-tauri/src/utils/: auth.rs  db.rs  errors.rs  mindmap.rs  mod.rs  schema.sql  user.rs
src/components/: AuthForm.tsx  BackgroundMusicPlayer.tsx  BaseToolTip.tsx  DashboardCard.tsx  EmojiMenu.tsx  FloatingMusicPlayer.tsx  Heading.tsx  Heroes.tsx  LoadingScreen.tsx  NestCard.tsx  SessionRestorer.tsx  TitleBar.tsx  theme-toggle.tsx  (+1 more)
(+342 files in other folders)
