[package]
name = "mindnest"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mindnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
rusqlite = "0.31"
rand = "0.8"
argon2 = "0.5"
tauri-utils = "2.5.0"
chrono = "0.4.41"
uuid = {version = "1.17.0", features = ["v4"] }
imagesize = "0.14.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip = "5.1.1"
lofty = "0.22.4"
thiserror = "2.0.17"
reqwest = {version = "0.13.1", features = ["json"] }
url = "2.5.8"
scraper = "0.25.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
log = "0.4.29"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
